--- a/SistemaCalificacion.Presentation/Views/Home/Index.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
-﻿@{
+﻿﻿@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">¡Bienvenido, @ViewBag.Username!</h1>
+    <p>Has iniciado sesión correctamente en la aplicación.</p>
+
+    @if (@TempData["SuccessMessage"] != null)
+    {
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+            @TempData["SuccessMessage"]
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    }
+
+    <a class="btn btn-primary" href="@Url.Action("Logout", "Account")">Logout</a>
+    <a class="btn btn-secondary" href="@Url.Action("Index", "Account")">Profile</a>
 </div>
