--- a/SistemaCalificacion.Presentation/Views/Account/Login.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Login</h1>
 
-<h4>Login</h4>
+<h4>Iniciar session</h4>
 <hr />
 <div class="row">
     @if (@TempData["SuccessMessage"] != null)
@@ -26,8 +26,11 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <a class="form-check-label" href="@Url.Action("Register", "Account")">No tienen una cuenta? Registrate Aquí!</a>
             </div>
             <div class="form-group">
                 <input type="submit" value="Login" class="btn btn-primary" />
