--- a/SistemaCalificacion.Presentation/Views/Account/Register.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Account/Register.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Register</h1>
 
-<h4>RegisterUserDto</h4>
+<h4>Crear cuenta</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -19,7 +19,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" />
+                <input asp-for="Password" type="password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Login">ir a Iniciar session</a>
 </div>
 
 @section Scripts {
