Update: Modificacion del Menu Principal

--- a/SistemaCalificacion.Presentation/Views/Shared/Sections/Menu/_HorizontalMenu.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Shared/Sections/Menu/_HorizontalMenu.cshtml
@@ -15,10 +15,10 @@
           <div data-i18n="Inicio">Inicio</div>
         </a>
       </li>
-      <li class='menu-item@(currentPage == "/Page2" ? " active" : "")'>
-        <a asp-controller="Page2" asp-action="Index" class="menu-link">
+      <li class='menu-item@(currentPage == "/Estudiantes" ? " active" : "")'>
+        <a asp-controller="Estudiantes" asp-action="Index" class="menu-link">
           <i class="menu-icon icon-base ri ri-file-line"></i>
-          <div data-i18n="Page 2">Page 2</div>
+          <div data-i18n="Estudiantes">Estudiantes</div>
         </a>
       </li>
     </ul>
