--- a/SistemaCalificacion.Presentation/Views/Account/Login.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Account/Login.cshtml
@@ -19,6 +19,7 @@
     }
     <div class="col-md-4">
         <form asp-action="Login">
+            <input type="hidden" name="returnUrl" value="@ViewData["ReturnUrl"]" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Email" class="control-label"></label>
