--- a/SistemaCalificacion.Presentation/Views/Estudiantes/Index.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Estudiantes/Index.cshtml
@@ -167,6 +167,59 @@
         </div>
         <div class="offcanvas-body mx-0 flex-grow-0 h-100">
 
+            <form asp-action="Add" asp-controller="Estudiantes" method="post">
+                <div class="form-group">
+                    <label for="Nombre">Nombre</label>
+                    <input type="text" name="Nombre" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="Apellido">Apellido</label>
+                    <input type="text" name="Apellido" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="Username">Usuario</label>
+                    <input type="text" name="Username" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="EmailInstitucional">Email Institucional</label>
+                    <input type="email" name="EmailInstitucional" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="EmailPersonal">Email Personal</label>
+                    <input type="email" name="EmailPersonal" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="Password">Contraseña</label>
+                    <input type="password" name="Password" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="Matricula">Matrícula</label>
+                    <input type="text" name="Matricula" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="Cedula">Cédula</label>
+                    <input type="text" name="Cedula" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <label for="Carrera">Carrera</label>
+                    <input type="text" name="Carrera" class="form-control" />
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Crear" class="btn btn-primary" />
+                </div>
+            </form>
+
+
+
             @*<form class="add-new-user pt-0" id="addNewUserForm" onsubmit="return false">
             <div class="form-floating form-floating-outline mb-5 form-control-validation">
                 <input type="text" class="form-control" id="add-user-fullname" placeholder="John Doe" name="userFullname" aria-label="John Doe" />
