--- a/SistemaCalificacion.Presentation/Views/Shared/Sections/Menu/_HorizontalMenu.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Shared/Sections/Menu/_HorizontalMenu.cshtml
@@ -17,7 +17,7 @@
       </li>
       <li class='menu-item@(currentPage == "/Estudiantes" ? " active" : "")'>
         <a asp-controller="Estudiantes" asp-action="Index" class="menu-link">
-          <i class="menu-icon icon-base ri ri-file-line"></i>
+          <i class="menu-icon icon-base ri ri-user-line"></i>
           <div data-i18n="Estudiantes">Estudiantes</div>
         </a>
       </li>
