--- a/SistemaCalificacion.Presentation/Views/Estudiantes/Index.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Estudiantes/Index.cshtml
@@ -31,7 +31,7 @@
 }
 
 <script type="text/javascript">
-     @ViewBag.JavascriptToRun
+     @*@ViewBag.JavascriptToRun*@
 
      function ShowErrorPopup() {
           alert('Sorry, we could not process your order.');
