--- a/SistemaCalificacion.Presentation/Views/Home/Index.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Home/Index.cshtml
@@ -1,6 +1,22 @@
-@{
+﻿@{
   ViewData["Title"] = "Inicio - Starter Kit";
 }
 
-<h4 class="py-4 mb-6">Page 1</h4>
-<p>Sample page.<br />For more layout options, refer <a href="@TempData.Peek("documentation")" target="_blank" class="fw-bold" rel="noopener noreferrer">Layout docs</a>.</p>
+<div class="col-md-12 col-xxl-12">
+    <div class="card">
+        <div class="d-flex align-items-end row">
+            <div class="col-md-6 order-2 order-md-1">
+                <div class="card-body">
+                    <h4 class="card-title mb-4">Bienvenido! <span class="fw-bold">@User?.Identity.Name</span> 🎉</h4>
+                    <p>Sistema de Calificaciones</p>
+                    <a href="/Estudiantes/" class="btn btn-primary waves-effect waves-light"></a>
+                </div>
+            </div>
+            <div class="col-md-6 text-center text-md-end order-1 order-md-2">
+                <div class="card-body pb-0 px-0 pt-2">
+                    <img src="https://demos.pixinvent.com/materialize-html-admin-template/assets/img/illustrations/illustration-john-dark.png" height="186" class="scaleX-n1-rtl" alt="View Profile" data-app-light-img="illustrations/illustration-john-light.png" data-app-dark-img="illustrations/illustration-john-dark.png" style="visibility: visible;">
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
