--- a/SistemaCalificacion.Presentation/Views/Shared/Sections/Footer/_Footer.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Shared/Sections/Footer/_Footer.cshtml
@@ -7,7 +7,7 @@
 <footer class="content-footer footer bg-footer-theme">
   <div class="@ViewData["containerNav"]">
     <div class="footer-container d-flex align-items-center justify-content-between py-4 flex-md-row flex-column">
-      <div class="mb-2 mb-md-0">
+      @*<div class="mb-2 mb-md-0">
         &#169;
         <script>
           document.write(new Date().getFullYear());
@@ -19,7 +19,7 @@
         <a href='@TempData.Peek("moreThemes")' target="_blank" class="footer-link me-4">More Themes</a>
         <a href='@TempData.Peek("documentation_menu_link")' target="_blank" class="footer-link me-4">Documentation</a>
         <a href='@TempData.Peek("support")' target="_blank" class="footer-link d-none d-sm-inline-block">Support</a>
-      </div>
+      </div>*@
     </div>
   </div>
 </footer>
