--- a/SistemaCalificacion.Presentation/Views/Estudiantes/Index.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Estudiantes/Index.cshtml
@@ -212,6 +212,10 @@
                     <label for="Carrera">Carrera</label>
                     <input type="text" name="Carrera" class="form-control" />
                 </div>
+                <div class="form-group form-check">
+                    <input class="form-check-input" type="checkbox" data-val="true" data-val-required="The Status field is required." id="Status" name="Status" value="true">
+                    <label class="form-check-label" for="Status">Status</label>
+                </div>
 
                 <div class="form-group">
                     <input type="submit" value="Crear" class="btn btn-primary" />
