--- a/SistemaCalificacion.Presentation/Views/Estudiantes/Add.cshtml
+++ b/SistemaCalificacion.Presentation/Views/Estudiantes/Add.cshtml
@@ -106,7 +106,15 @@
 
 
 <form asp-action="Add" method="post">
-
+    @if (_addError is not null)
+    {
+        <div class="alert alert-solid-danger d-flex align-items-center flex-wrap row-gap-2" role="alert">
+            <span class="alert-icon rounded">
+                <i class="icon-base ri ri-error-warning-line icon-md"></i>
+            </span>
+            @_addError
+        </div>
+    }
     <div class="form-group">
         <label asp-for="Nombre"></label>
         <input asp-for="Nombre" class="form-control" />
